fixes in naming

--- a/ProcessingOperations/ProcessingOperations.Tests/app.config
+++ b/ProcessingOperations/ProcessingOperations.Tests/app.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="processingManagers" type="ProcessingOperations.Configuration.ProcessingManagersSection, ProcessingOperations"/>
+        <section name="processingOperations" type="ProcessingOperations.Configuration.ProcessingOperationsSection, ProcessingOperations"/>
     </configSections>
-    <processingManagers>
+    <processingOperations>
         <repeatingOperations>
             <manager name="FakeProcessingManagerName1" operationKey="FakeOperationKey1" everySeconds="0.1"/>
             <manager name="FakeProcessingManagerName2" operationKey="FakeOperationKey2" everySeconds="0.2"/>
         </repeatingOperations>
-    </processingManagers>
+    </processingOperations>
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <dependentAssembly>
