--- a/ProcessingOperations/ProcessingOperations.csproj
+++ b/ProcessingOperations/ProcessingOperations.csproj
@@ -52,6 +52,15 @@
     <Compile Include="RepeatingOperationProcessingManager.cs" />
     <Compile Include="RepeatingOperationSettings.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".nuspec" />
+    <None Include="Content\app.config.uninstall.xdt" />
+    <None Include="Content\web.config.uninstall.xdt" />
+    <None Include="Content\web.config.install.xdt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Content\app.config.install.xdt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
