--- a/ProcessingOperations/ProcessingOperations.csproj
+++ b/ProcessingOperations/ProcessingOperations.csproj
@@ -62,6 +62,9 @@
     <None Include="Content\app.config.install.xdt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>$(ProjectDir)tools\nuget pack $(ProjectDir)ProcessingOperations.csproj -Prop Configuration=Debug</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
